31.Helm/nginx-ingress/jitsi-ingress-deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    meta.helm.sh/release-name: jitsi
    meta.helm.sh/release-namespace: jitsi-meet
  creationTimestamp: "2020-09-25T17:06:58Z"
  generation: 1
  labels:
    app.kubernetes.io/instance: jitsi
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jitsi-nginx-ingress
    helm.sh/chart: nginx-ingress-0.6.1
  name: jitsi-nginx-ingress
  namespace: jitsi-meet
  resourceVersion: "2551541"
  selfLink: /apis/extensions/v1beta1/namespaces/jitsi-meet/deployments/jitsi-nginx-ingress
  uid: 52f05399-59f8-460d-95f6-8709321089c1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: jitsi-nginx-ingress
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        diamanti.com/endpoint0: '{"endpointId":"jitsi-ing-ep1","perfTier":"high"}'
        prometheus.io/port: "9113"
        prometheus.io/scrape: "true"
      creationTimestamp: null
      labels:
        app: jitsi-nginx-ingress
    spec:
      containers:
      - args:
        - -nginx-plus=false
        - -nginx-reload-timeout=0
        - -enable-app-protect=false
        - -nginx-configmaps=$(POD_NAMESPACE)/jitsi-nginx-ingress
        - -default-server-tls-secret=$(POD_NAMESPACE)/jitsi-nginx-ingress-default-server-secret
        - -ingress-class=nginx
        - -use-ingress-class-only=false
        - -watch-namespace=jitsi-meet
        - -health-status=false
        - -health-status-uri=/nginx-health
        - -nginx-debug=false
        - -v=1
        - -nginx-status=true
        - -nginx-status-port=8080
        - -nginx-status-allow-cidrs=172.16.0.0/16
        - -report-ingress-status
        - -enable-leader-election=true
        - -leader-election-lock-name=jitsi-nginx-ingress-leader-election
        - -enable-prometheus-metrics=true
        - -prometheus-metrics-listen-port=9113
        # - -enable-custom-resources=true
        - -enable-tls-passthrough=false
        - -enable-snippets=false
        - -ready-status=true
        - -ready-status-port=8081
        image: nginx/nginx-ingress:1.8.1
        imagePullPolicy: IfNotPresent
        name: jitsi-nginx-ingress
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        - containerPort: 9113
          name: prometheus
          protocol: TCP
        - containerPort: 8081
          name: readiness-port
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /nginx-ready
            port: readiness-port
            scheme: HTTP
          periodSeconds: 1
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "1"
            memory: 4Gi
          requests:
            cpu: 100m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: true
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          runAsUser: 101
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: jitsi-nginx-ingress
      serviceAccountName: jitsi-nginx-ingress
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2020-09-25T17:06:58Z"
    lastUpdateTime: "2020-09-25T17:06:58Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: "2020-09-25T17:06:58Z"
    lastUpdateTime: "2020-09-25T17:06:58Z"
    message: ReplicaSet "jitsi-nginx-ingress-645745d649" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 1
  replicas: 1
  unavailableReplicas: 1
  updatedReplicas: 1
